wizard: Fix alignment of info icons
This patch fixes the alignment of info icons such that they do not
interfere with the right alignment of field labels.

--- a/dashboard/static/app.css
+++ b/dashboard/static/app.css
@@ -478,10 +478,12 @@ input.he-mem-input {
     margin-right: 5px;
 }
 
-i.info-icon {
+i.he-wizard-info-icon {
     color: #0088CE;
     font-size: 15px;
     vertical-align: middle;
+    position: absolute;
+    margin-left: 4px;
 }
 
 label.he-long-label-name {
